syntax = "proto3";

package piedotfun.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/api/resource.proto";
import "google/api/client.proto";

import "pie-dot-fun/v1/auth.proto";
import "pie-dot-fun/v1/common.proto";

option go_package = "github.com/ao-labs/spacebar-apis/go/pie-dot-fun/v1;piedotfun";

// FungibleTokenService contains the function to interact with the FungibleToken of the spacebar
service FungibleTokenService {
  rpc GetFungibleToken(GetFungibleTokenRequest) returns (FungibleToken) {
    option (google.api.http) = {
      get: "/v1/{fungible_token=fungibleTokens/*/*}"
    };
    option (google.api.method_signature) = "fungible_token";
    option (gateway_registered) = true;
    option (allow_unauthenticated) = true;
    option (external) = true;
  }

  rpc ListFungibleTokens(ListFungibleTokensRequest) returns (ListFungibleTokensResponse) {
    option (google.api.http) = {
      get: "/v1/fungibleTokens"
    };
    option (gateway_registered) = true;
    option (allow_unauthenticated) = true;
    option (external) = true;
  }
}


message GetFungibleTokenRequest {
  // The name of the fungible token to retrieve.
  // Format : "fungibleTokens/{chain}/{token_address}"
  string fungible_token = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "piedotfun.spacebarapis.xyz/FungibleToken"
    }
  ];
}

// ListFungibleTokensRequest payload
// (-- api-linter: core::0158::request-page-token-field=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
// (-- api-linter: core::0132::request-unknown-fields=disabled
//     aip.dev/not-precedent: We really need this field because reasons. --)
message ListFungibleTokensRequest {
  // The maximum number of fungible tokens to return. The service may return fewer than
  // this value.
  // If unspecified, at most 50 rows will be returned.
  // The maximum value is 1024; values above 1024 will be coerced to 1024.
  int32 page_size = 1;

  // Token of the page to retrieve. If not specified, the first
  // page of results will be returned. Use the value obtained from
  // `next_page_token` in the previous response in order to request
  // the next page of results.
  //
  // When paginating, all other parameters provided to `ListFungibleTokens` must match
  // the call that provided the page token.
  string page_token = 2;

  // Available Sequence and Operator
  // * name
  //   * `=`
  // * chain
  //   * `=`
  // * symbol
  //   * `=`
  // * market_cap_sol
  //   * `=`, `>`, `<`, `>=`, `<=`
  // * market_cap_usdc
  //   * `=`, `>`, `<`, `>=`, `<=`
  //
  // Examples
  // * name="fungibleTokens/SOLANA/FZ4MT1HYJHd9GK8D5mJ9f3r7irLaDL5NxBNLjGqrLqs9"
  // * chain=SOLANA
  // * symbol="MURAD"
  // * market_cap_sol>=1,000,000
  string filter = 3;

  // One or more fields to compare and use to sort the output. (optional)
  // Default order for a field is descending by id
  // To specify ascending or descending order, append " asc" or " desc" to the field name. If not specified, the order is ascending.
  //
  // Reference
  // * https://google.aip.dev/132#ordering.
  //
  // Supported Fields
  // * "market_cap", "create_date"
  //
  // Examples
  // * order_by=create_date desc
  // * order_by=market_cap desc
  string order_by = 4;
}

message ListFungibleTokensResponse {
  repeated FungibleToken fungible_tokens = 1 [
    (google.api.field_behavior) = REQUIRED
  ];

  // Pagination token used to retrieve the next page of results.
  // Pass the content of this string as the `page_token` attribute of
  // the next request. `next_page_token` is not returned for the last
  // page.
  string next_page_token = 2;
}

message FungibleToken {
  option (google.api.resource) = {
    type: "piedotfun.spacebarapis.xyz/FungibleToken",
    pattern: "fungibleTokens/{chain}/{address}"
  };

  // Format : "fungibleTokens/{chain}/{token_address}"
  string name = 1;

  ChainType chain = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  string address = 3 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  string display_name = 4 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  string symbol = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  string icon_image_url = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  int32 decimals = 7 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  repeated SNS sns = 8 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
}
